<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- <android.support.v7.widget.Toolbar
         android:id="@+id/tb_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_toolbar_height"
         android:background="@color/colorPrimary"
         android:theme="@style/Theme.AppCompat.NoActionBar">

         <TextView
             android:id="@+id/mTvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold" />

     </android.support.v7.widget.Toolbar>-->
    <include layout="@layout/navigationbar_yellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_contract"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="6dp"
            android:hint="@string/string_name"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="65dp">


        <TextView
            android:id="@+id/tv_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/sex_checked"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/string_male"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_tiny" />

        <TextView
            android:id="@+id/tv_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/sex_unchecked"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/string_female"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_tiny" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_phone"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/string_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_address"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small" />

        <TextView
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:autoLink="all"
            android:drawableLeft="@mipmap/icon_map2"
            android:gravity="center_vertical"
            android:hint="@string/map_address"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_address_detail"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small" />

        <EditText
            android:id="@+id/et_place_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/string_place_number"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chbAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/checkbox_selector"
        android:button="@null"
        android:checked="false"
        android:drawableLeft="@drawable/checkbox_selector"
        android:drawablePadding="10dp"
        android:text="设为默认地址" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/round_corner_yellow_fill"
        android:text="@string/string_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_size_small" />

    <!-- <Button
         android:id="@+id/btn_delete"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:background="@drawable/selector_btn_delete"
         android:text="@string/string_delete"
         android:textColor="@color/white"
         android:textSize="@dimen/dimen_text_size_small" />-->

</LinearLayout>
