<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_balance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/tv_info_detail"
        android:layout_marginTop="5dp"
        android:background="@color/item_info_bottom_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="请选择充值金额" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/lightgray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/tv_info_detail"
        android:layout_marginTop="5dp"
        android:background="@color/item_info_bottom_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="请选择支付方式" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/lightgray" />

    <RelativeLayout
        android:id="@+id/rl_wechat_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_wechat_pay"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@mipmap/ic_wechat_pay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_wechat_pay"
            android:layout_toRightOf="@id/iv_wechat_pay"
            android:text="@string/string_wechat_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_small"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/iv_wechat_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:src="@drawable/btn_check" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/lightgray" />


    <RelativeLayout
        android:id="@+id/rl_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_ali_pay"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@mipmap/ic_ali_pay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_ali_pay"
            android:layout_toRightOf="@id/iv_ali_pay"
            android:text="@string/string_ali_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_small"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/iv_ali_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:src="@drawable/btn_uncheck" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/lightgray" />

    <Button
        android:id="@+id/btn_confirm_pay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:background="@drawable/yuanjiao_shape"
        android:text="@string/string_confirm_pay"
        android:textColor="@color/white" />
</LinearLayout>